--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=CityTourist;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CityTourist;MultipleActiveResultSets=true"
   }
   }
